# AMR

./: .gitmodules
differential_drive/: CMakeLists.txt  package.xml
differential_drive/differential_drive/: differentialDrive.py  motion_control.py  odom.py  path_rviz.py  pure_pursuit.py  speed_control.py  waypoints_generator.py  zlac8015d.py
drive_msgs/: CMakeLists.txt  package.xml
drive_msgs/srv/: Velocity.srv
drive_rtu/: CMakeLists.txt  package.xml
drive_rtu/drive_rtu/: FeedbackNode.py  VelocityControllerNode.py  positionNode.py  pub_control.py  zlac8015d.py
nhatbot_twist_teleop/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
nhatbot_twist_teleop/install/nhatbot_twist_teleop/lib/nhatbot_twist_teleop/: joy_to_twist
nhatbot_twist_teleop/install/nhatbot_twist_teleop/share/nhatbot_twist_teleop/: package.bash  package.sh  (+3 more)
nhatbot_twist_teleop/log/: latest_build
nhatbot_twist_teleop/nhatbot_twist_teleop/: joy_to_twist.py  twist_relay.py
nhatbot_twist_teleop/src/: joy_to_twist.cpp  twist_relay.cpp
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: amcl_config.yaml  angular_filter.yaml  joy_config.yaml  joy_teleop.yaml  slam_config.yaml  slam_toolbox.yaml  twist_mux_topics.yaml
robot_bringup/launch/: lidar_a1.launch.py  liem_bringup.launch.py  provide_map.launch.py  slam.launch.py
robot_bringup/rviz/: build_map.rviz  display_rviz.rviz
ros_basic/: CMakeLists.txt  package.xml
ros_basic/launch/: move_robot.launch.py
ros_basic/param/: param.yaml
ros_basic/ros_basic/: client.py  move_robot.py  parameter.py  ros_publisher.py  ros_subscriber.py  server.py
rosbasic_move_msgs/: CMakeLists.txt  package.xml
rosbasic_move_msgs/srv/: Control.srv
rosbasic_msgs/: CMakeLists.txt  package.xml
rosbasic_msgs/srv/: AddTwoInts.srv  Multi.srv
safety/: CMakeLists.txt  package.xml
safety/safety/: safety_stop.py
user_interface/: CMakeLists.txt
user_interface/data/: f1tenth_waypoint_path.csv  waypoints265.csv  waypoints295.csv
user_interface/install/: local_setup.sh  setup.bash  setup.sh
user_interface/log/: latest_build
user_interface/ui/: final.ui  test.ui  ui.ui  ytb.ui
user_interface/user_interface/: UI_Node.py  baocao.csv  hinhvuong.csv  robot_ui.py  ui_Node.py  waypoints106.csv  waypoints116.csv  waypoints126.csv  waypoints295.csv  waypoints66.csv
user_interface/user_interface/install/: local_setup.sh  setup.sh
user_interface/user_interface/log/: latest_build
(+3 files in other folders)
